fix spacing on main page between headlines and arrow

--- a/components/arrowDown.module.css
+++ b/components/arrowDown.module.css
@@ -1,7 +1,7 @@
 .arrowDown {
   font-size: 2rem;
   text-align: center;
-  margin-top: 20px;
+  margin-top: 5rem;
   color: var(--light-text, #D5DCF4);
   /* leading-trim: both;
   text-edge: cap; */
